--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
 </head>
 <body>
   <div id="listener"></div>
+  <div id="quiz"></div>
+  <button id="submit"></button>
   <script src="public/lib/jquery/dist/jquery.min.js"></script>
   <script src="public/lib/underscore/underscore-min.js"></script>
   <script type="text/javascript" src="data.js"></script>
   <script type="text/javascript" src="results.js"></script>
+
   <script type="text/javascript" src="quiz.js"></script>
+  <script type="text/javascript" src="ui.js"></script>
 </body>
 </html>
